feat(get-posts): add userId and dates filter
Update swagger to match the new endpoint format
Refactor tests given new parameters
